# governance

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .taplo.toml  LICENSE-MIT  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/scripts/: validate-member.sh  validate-single-file-change.sh  validate-team.sh
.github/workflows/: deploy-infra.yml  deploy.yml  sync.yml  test.yml  validate-pr.yml  validate.yml
docs/adrs/: 0001-record-architecture-decisions.md  0002-adopt-hybrid-synchronization-strategy.md  0005-define-member-schema.md
docs/schemas/: contributor.md  team.md
infra/: .terraform.lock.hcl  README.md  inputs.json  locals.tf  main.tf  variables.tf
infra/github/: inputs.tf  membership.tf  provider.tf  teams.tf
infra/keycloak/: .terraform.lock.hcl  idp.tf  idps.tf  inputs.tf  ldap.tf  leadership.tf  main.tf  openbao.tf  outputs.tf  providers.tf  saml.tf  teams.tf  user_profile.tf  variables.tf
infra/secrets/: inputs.tf  leadership.tf  main.tf  oidc.tf  policies.tf  teams.tf
members/: Yuxiang-Huang.toml  dsnarne.toml
meta/clients/: __init__.py  github_client.py  google_client.py  keycloak_client.py  slack_client.py
meta/linter/: __init__.py
meta/loaders/: __init__.py  key_ordering.py  members.py  teams.py  types.py
meta/logger/: __init__.py  _constants.py  _utils.py
meta/models/: __init__.py  _contributor.py  _member.py  _team.py
meta/reporter/: __init__.py
meta/schemas/: README.md  member.schema.json  team.schema.json
meta/synchronizers/: README.md  codeowners.py  google.py  google_drive.py  google_group.py  infra.py  slack.py
meta/synchronizers/github/: _issue_types.py  main.py
meta/synchronizers/github_synchronizer/: __init__.py  _populator.py  issue-types.json  main.py
meta/synchronizers/src/: __init__.py  abstract.py  codeowners.py  google_group.py  infra.py  slack.py
meta/tests/: __init__.py  helper.py  test_members.py  test_teams.py
meta/tests/members/: no-andrew-id.toml  valid.toml
meta/tests/members/for_teams/: bob.toml
meta/tests/mock_clients/: __init__.py  mock_github_client.py  mock_keycloak_client.py
meta/tests/teams/: unknown-member.toml
meta/validator/: README.md  __init__.py  __main__.py  checks.py  loader.py  main.py  model.py
meta/validator/contributors/: loader.py  validator.py
meta/validator/members/: __init__.py  loader.py  validator.py
meta/validator/shared/: __init__.py  key_ordering.py  reporter.py
meta/validator/src/: __init__.py  main.py  members.py  reporter.py  teams.py
meta/validator/src/members/: loader.py  validator.py
meta/validator/src/reporter/: __init__.py
meta/validator/src/shared/: __init__.py  key_ordering.py
meta/validator/src/teams/: __init__.py  loader.py  validator.py
meta/validator/teams/: loader.py  repo.py  validator.py
meta/validator/tests/: __init__.py  helper.py  test_member.py  test_members.py  test_smoke.py  test_teams.py
meta/validator/tests/members/: wrong-key-ordering.toml
meta/validator/tests/members/for_teams/: alice.toml
meta/validator/tests/mock_clients/: __init__.py  mock_github_client.py  mock_keycloak_client.py
meta/validator/tests/teams/: lead-not-member.toml  valid.toml  wrong-key-ordering.toml
teams/: goldador.toml  governance.toml  leadership.toml
