[project]
name = "governance"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["colorama>=0.4.6", "dotenv>=0.9.9", "pydantic>=2.12.5"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "ruff>=0.15.5",
  "ty>=0.0.20",
  "types-colorama>=0.4.15.20250801",
]
test = ["pytest>=8.3.5", "pytest-cov>=7.1.0"]
validator = ["httpx>=0.28.1", "pygithub>=2.9.0", "python-keycloak>=7.1.0"]
codeowners-synchronizer = ["pygithub>=2.9.0"]
slack-synchronizer = ["slack-sdk>=3.41.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["meta/*"]
exclude = ["meta/*/tests/**"]

[project.scripts]
validate = "meta.validator.src:main"
test = "meta.tests:main"
lint = "meta.linter:main"
sync-codeowners = "meta.synchronizers.codeowners:main"
sync-slack = "meta.synchronizers.slack:main"

[tool.ruff]
lint.select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"meta/tests/**" = ["S101"] # Allows `assert` in tests.

[tool.mypy]
strict = true
explicit_package_bases = true
